solution lab list_dic_comprehension

--- a/lab-python-list-comprehension.ipynb
+++ b/lab-python-list-comprehension.ipynb
@@ -75,6 +75,154 @@
     "\n",
     "```\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "29ac790e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#step 1\n",
+    "\n",
+    "def initialize_inventory(products):\n",
+    "\n",
+    "    inventory = {product:int(input(f\"Ingrese la cantidad de {product}\")) for product in products }    \n",
+    "    return inventory "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "5fe8a243",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#step 2\n",
+    "\n",
+    "def get_customer_orders():\n",
+    "\n",
+    "    num_orders = int(input(\"Ingrese el número de ordenes de producto: \"))\n",
+    "    customer_orders = {input(f\"Ingrese el nombre de la orden del producto {i+1}: \") for i in range(num_orders)}\n",
+    "\n",
+    "    return customer_orders "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "ea2426b0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#step 3.1\n",
+    "\n",
+    "def calculate_total_price(customer_orders):\n",
+    "    prices = [float(input(f\"Ingrese el precio de {product}: \")) for product in customer_orders]\n",
+    "    total_price = sum(prices)\n",
+    "\n",
+    "    print(f\"Precio total: {total_price}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "b8fac4b0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#step 3\n",
+    "\n",
+    "def update_inventory(customer_orders, inventory):\n",
+    "\n",
+    "    inventory = {product:(quantity - 1 \n",
+    "                if product in customer_orders and quantity > 0 else quantity) \n",
+    "                for product,quantity in inventory.items()} \n",
+    "\n",
+    "    inventory = {product: quantity for product,quantity in inventory.items() if quantity > 0}      \n",
+    "    \n",
+    "    return inventory"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "5d781fb3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#step 4\n",
+    "\n",
+    "def calculate_order_statistics(customer_orders, products):\n",
+    "    total_product_order = len(customer_orders)\n",
+    "    percentaje_product_order = total_product_order/len(products)*100\n",
+    "\n",
+    "    return total_product_order, percentaje_product_order"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "6426a5ad",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#step 5\n",
+    "\n",
+    "def print_order_statistics(order_statistics):\n",
+    "    total_products_ordered, unique_products_percentage = order_statistics\n",
+    "    print(\"Order Statistics:\")\n",
+    "    print(f\"Total de productos pedidos : {order_statistics[0]}\")\n",
+    "    print(f\"porcentaje de productos unicos vendidos :{order_statistics[1]:.2f}%\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "934a95cf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#step 6\n",
+    "\n",
+    "def print_update_inventory(inventory):\n",
+    "    print(\"inventario actualizado: \")\n",
+    "    inventory =  {product: quantity for product, quantity in inventory.items()}\n",
+    "    print(inventory)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "f9373527",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Order Statistics:\n",
+      "Total de productos pedidos : 3\n",
+      "porcentaje de productos unicos vendidos :60.00%\n",
+      "inventario actualizado: \n",
+      "{'hat': 9, 'mug': 9, 'keychain': 10, 'book': 10, 't-shirt': 9}\n",
+      "Precio total: 9.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "#step 7\n",
+    "products = [\"hat\",\"mug\",\"keychain\",\"book\",\"t-shirt\"]\n",
+    "\n",
+    "inventory = initialize_inventory(products)\n",
+    "customer_orders = get_customer_orders()\n",
+    "inventory = update_inventory(customer_orders, inventory)\n",
+    "order_statistics = calculate_order_statistics(customer_orders, products)\n",
+    "print_order_statistics(order_statistics)\n",
+    "print_update_inventory(inventory)\n",
+    "calculate_total_price(customer_orders)\n"
+   ]
   }
  ],
  "metadata": {
@@ -93,7 +241,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
